tests/fixtures/negative/potential-bugs/MissingPackageDeclaration.kt
/* Copyright (c) 2026
   All rights reserved. */
@file:Suppress("UNUSED")

package com.example

class WithPackage {
    fun doSomething() {
        println("hello")
    }
}
